[package]
name = "rust_chat_server"
version = "0.1.0"
authors = ["Amit Patel <redblobgames@gmail.com>"]
edition = "2018"

[lib.'cft(target_arch = "unknown")']
crate-type = ["cdylib"]

[[bin]]
name = "chat_server"
path = "src/chat_server.rs"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tungstenite = { version = "0.9", default-features = false, features = [] }

[profile.release]
lto = true
opt-level = 'z'
