[package]
name = "rust_network_game"
version = "0.1.0"
authors = ["Amit Patel <redblobgames@gmail.com>"]
edition = "2018"
repository = "https://github.com/redblobgames/2003-rust-network-game"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]
path = "src/game_client.rs"

[[bin]]
name = "game_client"
path = "src/game_client.rs"

[[bin]]
name = "game_server"
path = "src/game_server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
wasm-bindgen = "0.2"
lazy_static = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tungstenite = { version = "0.9", default-features = false, features = [] }

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 'z'
